# search_train

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  draft2.py  env-example  fill_source_data.py  pyproject.toml  setup.cfg
app/: elasticsearch_draft.py  main_app.py  numerals.py  settings.py
app/api/: fastapi_app.py
app/api/searching/: deps.py  service.py  views.py
app/cli/: typer_app.py
app/cli/indexing/: commands.py
app/core/: models.py
app/core/crud/: source_data.py  sql_source_query.py
app/core/indexing/: index_manager.py  index_mapper.py  index_repository.py  index_service.py
app/core/indexing/repositories/db/: source_data.py  sql_source_query.py
app/core/searching/: repository.py  service.py
app/indexing/: index_mapper.py  index_repository.py  index_service.py
app/infrastracture/: database.py
app/infrastructure/: cutom_logging.py  database.py  fill_source_data.py
app/infrastructure/schemas/: source_example_one.py
app/searching/: repository.py
search/: database.py  elasticsearch_draft.py  index_mapper.py  index_repository.py  index_service.py  settings.py  typer_draft.py
search/core/: models.py
search/core/crud/: source_data.py
tests/: conftest.py
tests/test_cli/: conftest.py
tests/test_cli/test_indexing/: conftest.py  test_indexing.py
utils/: fill_source_data.py
utils/alembic/: env.py
utils/alembic/versions/: 202406141625_560bd2cb4298_.py  202406160921_6308e2c89cc7_.py
utils/templates/: searching.html
utils/templates/css/: search.css
