[tool.poetry]
name = "search-train"
version = "0.1.0"
description = ""
authors = ["Nikita Dolgov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
elasticsearch = {extras = ["async"], version = "*"}
dynaconf = "*"
fastapi = "*"
uvloop = "*"
uvicorn = "*"
click = "*"
requests = "*"
types-requests = "*"
loguru = "*"
sqlalchemy = "*"
asyncmy = "*"
greenlet = "*"
pytest-mock = "*"
sentry-sdk = "*"
starlette-prometheus = "*"
more-itertools = "*"
pyinstrument = "*"
typer = "*"
elasticsearch-dsl = "*"
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
mypy = "^1.11.1"
ruff = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.pycln]
all = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.12
exclude = ['alembic','venv','tests','.venv','env','.env']

[[tool.mypy.overrides]]
# не трогаем внешний код из TECHN-462
module = "app.utils.elasticsearch_dsl_async.*"
follow_imports = "skip"
ignore_errors = true
disallow_untyped_defs= true
ignore_missing_imports = true



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
fix=true
unsafe-fixes=true
line-length = 160
select=["ALL"]
ignore=["D1","D203","D213","FA102","ANN101"]
cache-dir="tmp/ruf-cache/"

[tool.ruff.isort]
no-lines-before=["standard-library", "local-folder"]
known-third-party=[]
known-local-folder=["search-train"]

[tool.ruff.extend-per-file-ignores]
"tests/*.py"=["ANN401","S101","S311", "ANN204"]
"utils/alembic/*.py"=["ANN401","S101","S311", "ANN001"]
